# AlfaPang

./: .gitignore  .gitmodules  AlfaPang.cpp  CMakeLists.txt  LICENSE  README.md  dbg2vg.cpp  main.cpp
data/: ecoli100_names.txt  ecoli200_names.txt  ecoli3412_accession.txt  ecoli400_names.txt  sc118_names.txt  sc16_names.txt  sc32_names.txt  sc64_names.txt
include/: bfs.h  bfs.hpp  bfs_impl.hpp  collapse_paths.h  collapse_paths.hpp  collapse_paths_impl.hpp  fasta_utils.hpp  get_states.h  get_states.hpp  get_states_impl.hpp  gfa_writer.h  gfa_writer.hpp  gfa_writer_impl.hpp  hash_definitions.hpp  hashing.h  hashing.hpp  hashing_impl.hpp  process_block.h  process_block.hpp  process_block_impl.hpp  sequence_utils.h
scripts/: kmer_fractions.sh  preprocess_data.py
src/: CMakeLists.txt  fasta_utils.cpp  hash_definitions.cpp  main.cpp  sequence_utils.cpp
workflows/: data_preparation.md
